# email-newsletter

./: .dockerignore  Cargo.toml  Dockerfile  Notes.md  README.md  spec.yaml
.github/workflows/: scheduled-audit.yml
configuration/: base.yaml  production.yaml
migrations/: 20220413005831_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
